[package]
name = "lg-webos-client"
version = "0.6.0"
authors = ["kasper.ziemianek@gmail.com", "gavinpease@gmail.com"]
edition = "2021"
description = "LG webOS client"
readme = "README.md"
repository = "https://github.com/alphathekiwi/lg-webos-client"
license-file = "LICENSE"
keywords = ["lg", "webos", "client"]

[dependencies]
url = "2.3.1"
log = "^0.4.17"
futures = "0.3.25"
futures-util = "0.3.25"
tokio = { version = "1.39.1", default-features = false, features = ["rt"] }
tokio-tungstenite = { version = "0.23.1", features = ["url"]}
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"

[dev-dependencies]
# thiserror = "1.0.63"
env_logger = "0.11.4"
tokio = { version = "1.39.1", default-features = false, features = ["full"] }
